--- a/TestWebAplikacija/Views/Pocetna/Index.cshtml
+++ b/TestWebAplikacija/Views/Pocetna/Index.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewBag.Title = "AdminIndex";
     var i = 1;
+    var najpopularnijiTestovi = ViewBag.NajpopularnijiTestovi as IEnumerable<TestWebAplikacija.Models.NajpopularnijiTestoviViewModel>;
+    var triNajboljaKandidata = ViewBag.triNajboljaKandidata as IEnumerable<TestWebAplikacija.Models.TriNajboljaKandidataViewModel>;
 }
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -11,75 +13,131 @@
 
     <div class="row">
 
-        <div class="col-8">
+       <div class="@(User.IsInRole("Administrator")?"col-8":"col-12")" >
 
-            @{
-                if (User.IsInRole("Administrator"))
+        @{
+            if (User.IsInRole("Administrator"))
+            {
+                <a href="/Test/Create">Kreiraj test</a>
+            }
+        }
+
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th>@Html.DisplayNameFor(model => model.Naziv)</th>
+                    @{
+                        if (User.Identity.IsAuthenticated)
+                        {
+                            <th scope="col">@Html.DisplayNameFor(model => model.DatumKreiranja)</th>
+                        }
+                    }
+                    <th scope="col">@Html.DisplayNameFor(model => model.ProcenatBodovaZaPolaganje)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.Opis)</th>
+                    @{
+                        if (User.Identity.IsAuthenticated)
+                        {
+                            <th scope="col"></th>
+                        }
+                    }
+                </tr>
+            </thead>
+            <tbody>
+
+                @foreach (var item in Model)
                 {
-                    <a href="/Test/Create">Kreiraj test</a>
-                }
-             }
-
-                    <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th scope="col">#</th>
-                                <th>@Html.DisplayNameFor(model => model.Naziv)</th>
-                                @{
-                                    if (User.Identity.IsAuthenticated)
-                                    {
-                                        <th scope="col">@Html.DisplayNameFor(model => model.DatumKreiranja)</th>
-                                    }
-                                }
-                                <th scope="col">@Html.DisplayNameFor(model => model.ProcenatBodovaZaPolaganje)</th>
-                                <th scope="col">@Html.DisplayNameFor(model => model.Opis)</th>
-                                @{
-                                    if (User.Identity.IsAuthenticated)
-                                    {
-                                        <th scope="col"></th>
-                                    }
-                                }
-                            </tr>
-                        </thead>
-                        <tbody>
-
-                            @foreach (var item in Model)
+                    <tr>
+                        <th style="font-weight:normal" class="text-center" scope="row">@i</th>
+                        <th style="font-weight:normal" class="text-center">@item.Naziv</th>
+                        @{
+                            if (User.Identity.IsAuthenticated)
                             {
-                            <tr>
-                                <th style="font-weight:normal" class="text-center" scope="row">@i</th>
-                                <th style="font-weight:normal" class="text-center">@item.Naziv</th>
-                                @{
-                                    if (User.Identity.IsAuthenticated)
-                                    {
-                                        <th style="font-weight:normal" class="text-center">@item.DatumKreiranja.ToShortDateString()</th>
-                                    }
-                                }
-                                <th style="font-weight:normal" class="text-center">@item.ProcenatBodovaZaPolaganje%</th>
-                                <th style="font-weight:normal">@item.Opis</th>
-                                @{
-                                    if (User.IsInRole("Administrator"))
-                                    {
-                                        <th style="font-weight:normal" class="text-center"><a href="/Test/Edit/@item.TestId" class="fas fa-edit"></a> <a href="/Test/Detail/@item.TestId" class="fas fa-ellipsis-h pl-3"></a></th>
-                                    }
-                                }
-                                @{
-                                    if (User.IsInRole("Korisnik"))
-                                    {
-                                        <th style="font-weight:normal" class="text-center"><a href="/Test/Polozi/@item.TestId" class="fas fa-pen"></a></th>
-                                    }
-                                }
-                            </tr>
-                                i++;
+                                <th style="font-weight:normal" class="text-center">@item.DatumKreiranja.ToShortDateString()</th>
                             }
-                        </tbody>
-                    </table>
-
-                </div>
-
-
-        <div class="col-4"></div>
+                        }
+                        <th style="font-weight:normal" class="text-center">@item.ProcenatBodovaZaPolaganje%</th>
+                        <th style="font-weight:normal">@item.Opis</th>
+                        @{
+                            if (User.IsInRole("Administrator"))
+                            {
+                                <th style="font-weight:normal" class="text-center"><a href="/Test/Edit/@item.TestId" class="fas fa-edit"></a> <a href="/Test/Detail/@item.TestId" class="fas fa-ellipsis-h pl-3"></a></th>
+                            }
+                        }
+                        @{
+                            if (User.IsInRole("Korisnik"))
+                            {
+                                <th style="font-weight:normal" class="text-center"><a href="/Test/Polozi/@item.TestId" class="fas fa-pen"></a></th>
+                            }
+                        }
+                    </tr>
+                    i++;
+                }
+            </tbody>
+        </table>
 
     </div>
+
+                @{
+                    if (User.IsInRole("Administrator"))
+                    {
+                        i = 1;
+       <div class="col-4">
+
+           <table class="table table-bordered">
+               <thead>
+                   <tr>
+                       <th scope="col">#</th>
+                       <th scope="col">Naziv</th>
+                       <th scope="col">Opis</th>
+                   </tr>
+               </thead>
+               <tbody>
+                   @foreach (var item in najpopularnijiTestovi)
+                   {
+                       <tr>
+                           <td scope="row">@i</td>
+                           <td scope="row">@item.Naziv</td>
+                           <td scope="row">@item.Opis</td>
+                       </tr>
+                       i++;
+                   }
+               </tbody>
+           </table>
+
+                @{ 
+                    i = 1;
+                }
+
+           <table class="table table-bordered">
+               <thead>
+                   <tr>
+                       <th scope="col">#</th>
+                       <th scope="col">Ime</th>
+                       <th scope="col">Prezime</th>
+                       <th scope="col">Korisnicko ime</th>
+                   </tr>
+               </thead>
+               <tbody>
+                   @foreach (var item in triNajboljaKandidata)
+                   {
+                       <tr>
+                           <td scope="row">@i</td>
+                           <td scope="row">@item.Ime</td>
+                           <td scope="row">@item.Prezime</td>
+                           <td scope="row">@item.KorisnickoIme</td>
+                       </tr>
+                       i++;
+                   }
+               </tbody>
+           </table>
+
+
+       </div>
+                    }
+                }
+
+            </div>
 
 </div>
 
